RichwoodNew/src/objects/Contact_Role__c.object
<CustomObject>
    <fields>
        <fullName>Check_in_With__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check in With</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>Division__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Contact Roles</relationshipLabel>
        <relationshipName>Contact_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Superintendent</fullName>
                </value>
                <value>
                    <fullName>Forman</fullName>
                </value>
                <value>
                    <fullName>Belt Coordinator</fullName>
                </value>
                <value>
                    <fullName>Maintenance Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Role</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>